Staring to add a gui for filtering markers...

--- a/index.html
+++ b/index.html
@@ -21,15 +21,38 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css" media="screen" />
 <!-- google maps -->
 <script src="http://maps.google.com/maps/api/js?sensor=true&.js"></script>
+<!-- google chart -->
+<script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.1.1/css/bootstrap-colorpicker.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.1.1/js/bootstrap-colorpicker.min.js"></script>
 
-<div id="map"></div>
+<!-- query selector -->
+<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+<link rel='stylesheet prefetch' href='http://codepen.io/harveyl888/pen/OXpZLE.css'>
+<link rel='stylesheet prefetch' href='http://codepen.io/harveyl888/pen/rLyKVz.css'>
+<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker3.min.css'>
+<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/dot/1.0.3/doT.min.js'></script>
+<script src='http://codepen.io/harveyl888/pen/YWZamx.js'></script>
+<script src='http://codepen.io/harveyl888/pen/OXpZLE.js'></script>
+<script src='http://codepen.io/harveyl888/pen/rLyKVz.js'></script>
 
+
+<!-- FIXME -->
+<div id="builder-basic"></div>
+<input type ="button" id="btn-get" value="Apply Rules"></input>
+
+
+<div id="map"></div>
 <div id="overlay" class="list-group"></div>
-  
-    <script src="js/index.js"></script>
+
+
+<script src="js/index.js"></script>
+<script src="js/query_interpreter.js"></script>
+<script src="js/filter_gui.js"></script>
+
 
 </body>
 </html>
