Filtering on the side list works also... :+1:
- timestamp problem fixed (multiply by 1000 for js... :'( )
- display all the blast attack dataset for now (the drones will come soon)
- I' proud of me... :sunglasses: :bowtie: and i'ts a big deal !!!

--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>google-map-marker-customization</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+  <title>Pakistant Blast and Drone attacks exploration</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
