Going to sleep...

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 	<div id="stats">
 		<button id="close_stats">&#735;</button>
 		<h1 style='text-align:center;'>some stats here...</h1>
+
+		<!-- display the stats in 4 boxes -->
+		<div id="div1">
+		</div>
+		<div id="div2">
+		</div>
+		<div id="div3">
+		</div>
+		<div id="div4">
+		</div>
 	</div>
 
 	<!-- scripts -->
