A better css with not hardcoded pixels... using vh and vw instead...

--- a/index.html
+++ b/index.html
@@ -44,12 +44,20 @@
 
 		<!-- display the stats in 4 boxes -->
 		<div id="div1">
+			bar chart</br>
+			nb d'attaques en fonction du jour de la semaine
 		</div>
 		<div id="div2">
+			cammeber</br>
+			proportion de morts en fonction du type de cible et/ou religion
 		</div>
 		<div id="div3">
+			timeline</br>
+			nb attaques par date par nb morts
 		</div>
 		<div id="div4">
+			timeline like</br>
+			laisser l'utilisateur trouver des correlations entre 2 variables (DTW) avec comme axe commun le temps
 		</div>
 	</div>
 
