--- a/tmp_projet_top_secret/testprojecto.html
+++ b/tmp_projet_top_secret/testprojecto.html
@@ -18,14 +18,14 @@
     <script src="./dist/gridstack.jQueryUI.js"></script>
 
     <style type="text/css">
-        .grid-stack {
-            background: #f0f0f0;
-        }
+    body, .grid-stack {
+        background: #f0f0f0;
+    }
 
-        .grid-stack-item-content {
-            text-align: center;
-            background-color: #fff;
-        }
+    .grid-stack-item-content {
+        text-align: center;
+        background-color: #fff;
+    }
     </style>
 </head>
 <body>
@@ -37,96 +37,96 @@
             <a class="btn btn-default" id="clear-grid" href="#">Clear Grid</a>
         </div>
     -->
-        <br/>
+    <br/>
 
-        <div class="grid-stack">
-        <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="3">
-                <div class="grid-stack-item-content">
-                    MAP
-                </div>
-            </div>
-        <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="3">
-                <div class="grid-stack-item-content">
-                    FILTRES
-                </div>
-            </div>
-        <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="3">
-                <div class="grid-stack-item-content">
-                    LISTE
-                </div>
-            </div>
-        <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="3">
-                <div class="grid-stack-item-content">
-                    GRAFFS
-                </div>
-            </div>
-        <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="4" data-gs-height="3">
-                <div class="grid-stack-item-content">
-                    NOTE
-                </div>
+    <div class="grid-stack">
+        <div class="grid-stack-item" data-gs-x="5" data-gs-y="0" data-gs-width="9" data-gs-height="3">
+            <div class="grid-stack-item-content">
+                FILTRES
             </div>
         </div>
-
-        <hr/>
-
-        
+        <div class="grid-stack-item" data-gs-x="0" data-gs-y="0" data-gs-width="3" data-gs-height="9">
+            <div class="grid-stack-item-content">
+                LIST
+            </div>
+        </div>
+        <div class="grid-stack-item" data-gs-x="3" data-gs-y="3" data-gs-width="7" data-gs-height="6">
+            <div class="grid-stack-item-content">
+                MAP
+            </div>
+        </div>
+        <div class="grid-stack-item" data-gs-x="10" data-gs-y="3" data-gs-width="2" data-gs-height="4">
+            <div class="grid-stack-item-content">
+                NOTES
+            </div>
+        </div>
+        <div class="grid-stack-item" data-gs-x="10" data-gs-y="7" data-gs-width="2" data-gs-height="2">
+            <div class="grid-stack-item-content">
+                CTRL
+            </div>
+        </div>
     </div>
 
+    <hr/>
 
-    <script type="text/javascript">
-        $(function () {
-            var options = {
-                float:true
-            };
-            $('.grid-stack').gridstack(options);
 
-            new function () {
+</div>
+
+
+<script type="text/javascript">
+$(function () {
+    var options = {
+        float:true
+    };
+    $('.grid-stack').gridstack(options);
+
+    new function () {
                 /*this.serializedData = [
                     {x: 0, y: 0, width: 2, height: 2},
                     {x: 3, y: 1, width: 1, height: 2},
                     {x: 4, y: 1, width: 1, height: 1},
                     {x: 2, y: 3, width: 3, height: 5},
-                ];*/
+                    ];*/
 
-                this.grid = $('.grid-stack').data('gridstack');
+                    this.grid = $('.grid-stack').data('gridstack');
 
-                this.loadGrid = function () {
-                    this.grid.removeAll();
-                    var items = GridStackUI.Utils.sort(this.serializedData);
-                    _.each(items, function (node) {
-                        this.grid.addWidget($('<div><div class="grid-stack-item-content" /><div/>'),
-                            node.x, node.y, node.width, node.height);
-                    }, this);
-                    return false;
-                }.bind(this);
+                    this.loadGrid = function () {
+                        this.grid.removeAll();
+                        var items = GridStackUI.Utils.sort(this.serializedData);
+                        _.each(items, function (node) {
+                            this.grid.addWidget($('<div><div class="grid-stack-item-content" /><div/>'),
+                                node.x, node.y, node.width, node.height);
+                        }, this);
+                        return false;
+                    }.bind(this);
 
-                this.saveGrid = function () {
-                    this.serializedData = _.map($('.grid-stack > .grid-stack-item:visible'), function (el) {
-                        el = $(el);
-                        var node = el.data('_gridstack_node');
-                        return {
-                            x: node.x,
-                            y: node.y,
-                            width: node.width,
-                            height: node.height
-                        };
-                    }, this);
-                    $('#saved-data').val(JSON.stringify(this.serializedData, null, '    '));
-                    return false;
-                }.bind(this);
+                    this.saveGrid = function () {
+                        this.serializedData = _.map($('.grid-stack > .grid-stack-item:visible'), function (el) {
+                            el = $(el);
+                            var node = el.data('_gridstack_node');
+                            return {
+                                x: node.x,
+                                y: node.y,
+                                width: node.width,
+                                height: node.height
+                            };
+                        }, this);
+                        $('#saved-data').val(JSON.stringify(this.serializedData, null, '    '));
+                        return false;
+                    }.bind(this);
 
-                this.clearGrid = function () {
-                    this.grid.removeAll();
-                    return false;
-                }.bind(this);
+                    this.clearGrid = function () {
+                        this.grid.removeAll();
+                        return false;
+                    }.bind(this);
 
-                $('#save-grid').click(this.saveGrid);
-                $('#load-grid').click(this.loadGrid);
-                $('#clear-grid').click(this.clearGrid);
+                    $('#save-grid').click(this.saveGrid);
+                    $('#load-grid').click(this.loadGrid);
+                    $('#clear-grid').click(this.clearGrid);
 
                 //this.loadGrid();
             };
         });
-    </script>
+</script>
 </body>
 </html>
