--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <!-- the list of incidents -->
             <div class="grid-stack-item" data-gs-x="9" data-gs-y="0" data-gs-width="3" data-gs-height="9">
                 <div class="grid-stack-item-content">
+                	<!-- <input placeholder="search" style="width:100%;height:40px;text-align:left;"></input> -->
                     <div id="overlay" class="list-group"></div>
                 </div>
             </div>
@@ -119,7 +120,6 @@
         var options = {
             float: false, //set the gravity to the up
             handle: '.grid-stack-item-content',
-            rtl: 'true'
         };
         $('.grid-stack').gridstack(options);
 
@@ -156,6 +156,7 @@
     $("#builder-basic").css("width", '100%');
     $(".rules-group-container").css("background", "white");
     $("body").css("overflow", "scroll");
+    $("#builder-basic").css("text-align", "left");
     </script>
 </body>
 </html>
