Downloading all the non httpS ressources to allow a good deployement with firebase...

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css" media="screen" />
     <!-- toastr : for notifications managing... -->
-    <link href="http://codeseven.github.io/toastr/build/toastr.min.css" rel="stylesheet"/>
-    <script src="http://codeseven.github.io/toastr/build/toastr.min.js"></script>
+    <link href="./css/toastr.min.css" rel="stylesheet"/>
+    <script src="./js/toastr.min.js"></script>
     <!-- google maps -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChtIzkJ44e3WLkQpgBOPjfp6WU-C8dNk8&libraries=drawing"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
@@ -42,14 +42,14 @@
     <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
     <!-- query selector -->
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-    <link rel='stylesheet prefetch' href='http://codepen.io/harveyl888/pen/OXpZLE.css'>
-    <link rel='stylesheet prefetch' href='http://codepen.io/harveyl888/pen/rLyKVz.css'>
+    <link rel='stylesheet prefetch' href='./css/qb.css'>
+    <link rel='stylesheet prefetch' href='./css/custom_qb.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/css/bootstrap-datepicker3.min.css'>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dot/1.0.3/doT.min.js'></script>
-    <script src='http://codepen.io/harveyl888/pen/YWZamx.js'></script>
-    <script src='http://codepen.io/harveyl888/pen/OXpZLE.js'></script>
-    <script src='http://codepen.io/harveyl888/pen/rLyKVz.js'></script>
+    <script src='./js/jquery_extendext.js'></script>
+    <script src='./js/error_qb.js'></script>
+    <script src='./js/sifter.js'></script>
     <!-- gridstack imports -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/gridstack.css"/>
