fixing the querybuilder height problem...

--- a/index.html
+++ b/index.html
@@ -403,6 +403,9 @@
         refresh_day();
     } 
     
+
+    //fixing the querybuilder height problem...
+    $("#builder-basic").css("height", '100%')
     </script>
 </body>
 </html>
