Hidding the buublechart tooltips...

--- a/index.html
+++ b/index.html
@@ -384,6 +384,9 @@
         bubble: {textStyle: {fontSize: 11}},
         explorer: {},
         colorAxis: {colors: ['yellow', 'red']},
+        tooltip : {
+            trigger: 'none'
+        },
         height: parseInt($("#div1").css("height")),
         width: parseInt($("#div1").css("width"))
       };
