--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
         </div>
 
         <div id="div4">
-            timeline like</br>
-            laisser l'utilisateur trouver des correlations entre 2 variables (DTW) avec comme axe commun le temps
+            <div id="time_chart" style="width: 100%; height: 500px;"></div>
         </div>
     </div>
 
@@ -313,3 +312,4 @@
     </script>
 </body>
 </html>
+
