fixer un peu le graphe mais ça marche pas quand meme

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
 
         <div id="div4">
-            <div id="time_chart" style="width: 100%; height: 500px;"></div>
+            <div id="time_chart" style="width: 100%; height: 100%;"></div>
         </div>
     </div>
 
@@ -215,7 +215,7 @@
     $("#div1").css("position", "absolute");
     $("#div2").css("position", "absolute");
     $("#div3").css("position", "absolute");
-    $("#div3").css("position", "absolute");
+    $("#div4").css("position", "absolute");
     $("#piechart").css("position", "absolute");
     $("#field3").css("position", "absolute");
 
@@ -239,7 +239,7 @@
     $("#field3").css("left","35%");
     $("#div3").css("left", "50%");
     $("#piechart").css("left", "10%");
-    $("#div4").css("top", "50%");
+    $("#div4").css("top", "40%");
     $("#div4").css("left", "50%");
     
 
